<resources>
    <string name="app_name">Red Empresa</string>
    <string name="menu">MENÚ</string>
    <string name="menuInicio">INICIO</string>
    <string name="menuBuscar">BUSCAR EMPRESAS</string>
    <string name="menuLista">LISTA DE EMPRESAS</string>
    <string name="menuGemini">USAR GEMINI</string>
    <string name="menuObtenerTags">BUSCAR TAGS</string>
    <string name="menuMapa">MAPA DE TAGS</string>
    <string name="menuSalir">SALIR</string>
    <string name="bienvenida"></string>
    <string name="prompt">Escribe tu mensaje aquí</string>

    <string name="Open">Abrir menú</string>
    <string name="Close">Cerrar menú</string>

    <string name="mensajeBienvenida1">Bienvenid@ a </string>
    <string name="mensajeBienvenida2">Para comenzar, acceda al menú y seleccione una opción.</string>

    <string name="mensajeBuscarEmpresas">Pulsa el botón para hacer una búsqueda de empresas.</string>
    <string name="botonMostrarTags">Mostrar Tags</string>
    <string name="botonBuscarOfertas">Buscar Empresas</string>
    <string name="botonEnviarGemini">Enviar</string>
    <string name="mensajeBuscarTags">Pulsa el botón para hacer una búsqueda de etiquetas.</string>
    <string name="botonBuscarTags">Buscar Tags</string>
    <string name="mensajeBuscarOfertasParametros">Introduce parámetros para buscar empresas.</string>



</resources>